--- a/lab07/stylesheet.css
+++ b/lab07/stylesheet.css
@@ -47,6 +47,11 @@ a {
     margin-bottom: 30px;
 }
 
+form {
+    padding: 10px;
+    margin-bottom: 30px;
+}
+
 a:link {color: #df7861;}
 a:visited {color: #ecb390;}
 
