--- a/lab10/stylesheet.css
+++ b/lab10/stylesheet.css
@@ -39,12 +39,24 @@ nav {
     font-size: 1.2em;
     background-color: #faf3dd;
     padding: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 nav a:hover {
     text-decoration-style: double;
     font-size: 1.2em;
     background-color: #e8e8e8;
+}
+
+@media only screen and (max-width: 768px) {
+    nav a {max-width: 100%;
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        margin: 0px;
+        padding: 3px;
+    }
+    nav span {display: none;}
+    .quote {display: none;}
 }
 
 a {
@@ -67,7 +79,7 @@ header {text-align: center;}
 }
 
 footer {
-    margin: 30px;
+    margin: 10px;
 }
 
 .quote {float: right;}
@@ -75,17 +87,19 @@ footer {
 .part1 {
     background-color: white;
     border-radius: 2em;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .info {
-    padding: 20px;
+    padding: 10px;
     float: left;
-    margin-right: 30px;
 }
 
-.links {padding-top: 80px;}
+.links {
+    padding-top: 70px;
+}
 
 .clearfloat {clear: both;}
 
@@ -93,26 +107,24 @@ footer {
     display: flex;
     background-color: white;
     border-radius: 2em;
-    margin-top: 40px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
     flex-wrap: wrap;
 }
 
 .map, .form {
-    padding: 20px;
+    padding: 10px;
 }
 
 .form {
     order: 1;
-    margin-right: 30px;
     margin-top: 20px;
 }
 
 .map {
     order: 2;
-    margin-top: 60px;
-    max-width: 100%;
 }
 
 .flexboxcenter {
