--- a/project/ProjectSylesheet.css
+++ b/project/ProjectSylesheet.css
@@ -2,7 +2,7 @@ h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.65em;
     margin: 30px;
-    margin-left: 180px;
+    margin-left: 135px;
 }
 
 h2 {
@@ -35,6 +35,11 @@ nav {
     font-size: 1.25em;
 }
 
+#navicon {
+    display: none;
+    height: 20px;
+}
+
 nav a:hover {
     background-color: yellow;
     text-decoration: underline overline black;
@@ -65,4 +70,35 @@ footer {
     padding: 20px;
     background-color: black;
     color: white;
+}
+
+@media only screen and (max-width: 755px) {
+    header, .logo {
+        display: none;
+    }
+
+    nav {
+        margin: 0px;
+        font-size: 0.8em;
+    }
+}
+
+@media only screen and (max-width: 415px) {
+    #navicon {
+        display: block;
+        position: relative;
+        top: 10px;
+        right: 10px;
+        float:right;
+    }
+
+    nav a {
+        display: block;
+        padding: 5px;
+        }
+
+    #navlinks {
+        display: none;
+        text-align: center;
+    }
 }
