--- a/project/ProjectSylesheet.css
+++ b/project/ProjectSylesheet.css
@@ -1,6 +1,6 @@
 h1 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.65em;
+    font-family: 'Carter One', cursive;
+    font-size: 1.8em;
     margin: 30px;
     margin-left: 135px;
 }
